2011-01-24  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17274: SQL error in Update Wizard of workspaces

2011-01-24  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #17078: in fileadmin saving changes from t3editor doesn't work

2011-01-24  Francois Suter  <francois.suter@typo3.org>

	* Follow-up to #16848: Added link to buzz.typo3.org article about changes to CSH in FlexForms to NEWS.txt

2011-01-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17263: JS error in contexthelp

2011-01-23  Ingo Renner  <ingo@typo3.org>

	* Fixed phpDoc comment of t3lib_utility_Mail::getSystemFromAddress() and some readability clean-up
	* Follow-up to #17214: Page module not using full width with default layout

2011-01-22  Steffen Gebert  <steffen@steffen-gebert.de>

	* Follow-up to #17181: Corrected typo in _.htaccess (Thanks to Simon Schaufelberger)

2011-01-22  Ernesto Baschny  <ernesto.baschny@typo3.org>

	* Release of TYPO3 4.5.0rc1

2011-01-22  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17203: The ExtDirect token needs to be regenerated after relogin by popup window (Thanks to Helmut Hummel)
	* Merge of extension manager for RC1

2011-01-22  Ernesto Baschny  <ernst@cron-it.de>

	* Cleanup: Updated ext_emconf.php files in system extensions

2011-01-22  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug: #16524: No inline relation to tables with tabs possible

2011-01-22  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17211: Thumbnails in TCEforms have broken clickMenu

2011-01-22  Ingo Renner  <ingo@typo3.org>

	* Fixed incorrect english label for table tt_content from "Pagecontent" to "Page Content"
	* Fixed bug #17213: Names of backend layout columns not displayed properly
	* Follow-up to #17213: icons to add content were shifted down a bit, credits Steffen Gebert
	* Fixed bug #16681: Live-Search: Taking focus from search field should show tooltip "Enter search term" again, credits Jeff Segars